# serializer version: 1
# name: test_invoices
  Invoices(previousPeriodInvoice=Invoices.Invoice(StartDate=datetime.datetime(2023, 3, 1, 0, 0), PeriodDescription='Maart 2023', TotalAmount=140.12), currentPeriodInvoice=Invoices.Invoice(StartDate=datetime.datetime(2023, 4, 1, 0, 0), PeriodDescription='April 2023', TotalAmount=80.34), upcomingPeriodInvoice=Invoices.Invoice(StartDate=datetime.datetime(2023, 5, 1, 0, 0), PeriodDescription='Mei 2023', TotalAmount=80.34))
# ---
# name: test_login
  Authentication(authToken='hello', refreshToken='world')
# ---
# name: test_month_summary
  MonthSummary(actualCostsUntilLastMeterReadingDate=12.34, expectedCostsUntilLastMeterReadingDate=20.0, expectedCosts=50.0, lastMeterReadingDate='2023-01-01')
# ---
# name: test_prices
  list([
    list([
      Price(
        date_from=datetime.datetime(2022, 11, 21, 0, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=4.0,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.0,
        market_price_tax=2.0,
        market_price_with_tax=3.0,
        sourcing_markup_price=3.0,
        total=10.0,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=4.111,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.111,
        market_price_tax=2.111,
        market_price_with_tax=3.222,
        sourcing_markup_price=3.111,
        total=10.444,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=4.222,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.222,
        market_price_tax=2.222,
        market_price_with_tax=3.444,
        sourcing_markup_price=3.222,
        total=10.888,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=4.333,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.333,
        market_price_tax=2.333,
        market_price_with_tax=3.666,
        sourcing_markup_price=3.333,
        total=11.332,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=4.444,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.444,
        market_price_tax=2.444,
        market_price_with_tax=3.888,
        sourcing_markup_price=3.444,
        total=11.776,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=4.555,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.555,
        market_price_tax=2.555,
        market_price_with_tax=4.11,
        sourcing_markup_price=3.555,
        total=12.22,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=4.666,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.666,
        market_price_tax=2.666,
        market_price_with_tax=4.332,
        sourcing_markup_price=3.666,
        total=12.664,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=4.777,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.777,
        market_price_tax=2.777,
        market_price_with_tax=4.554,
        sourcing_markup_price=3.777,
        total=13.108,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=4.888,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.888,
        market_price_tax=2.888,
        market_price_with_tax=4.776,
        sourcing_markup_price=3.888,
        total=13.552,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=4.999,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.999,
        market_price_tax=2.999,
        market_price_with_tax=4.998,
        sourcing_markup_price=3.999,
        total=13.996,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=4.1,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.1,
        market_price_tax=2.1,
        market_price_with_tax=3.2,
        sourcing_markup_price=3.1,
        total=10.4,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=4.11,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.11,
        market_price_tax=2.11,
        market_price_with_tax=3.22,
        sourcing_markup_price=3.11,
        total=10.44,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=4.12,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.12,
        market_price_tax=2.12,
        market_price_with_tax=3.24,
        sourcing_markup_price=3.12,
        total=10.48,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=4.13,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.13,
        market_price_tax=2.13,
        market_price_with_tax=3.26,
        sourcing_markup_price=3.13,
        total=10.52,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=4.14,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.14,
        market_price_tax=2.14,
        market_price_with_tax=3.28,
        sourcing_markup_price=3.14,
        total=10.56,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=4.15,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.15,
        market_price_tax=2.15,
        market_price_with_tax=3.3,
        sourcing_markup_price=3.15,
        total=10.6,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=4.16,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.16,
        market_price_tax=2.16,
        market_price_with_tax=3.32,
        sourcing_markup_price=3.16,
        total=10.64,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=4.17,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.17,
        market_price_tax=2.17,
        market_price_with_tax=3.34,
        sourcing_markup_price=3.17,
        total=10.68,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=4.18,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.18,
        market_price_tax=2.18,
        market_price_with_tax=3.36,
        sourcing_markup_price=3.18,
        total=10.72,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=4.19,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.19,
        market_price_tax=2.19,
        market_price_with_tax=3.38,
        sourcing_markup_price=3.19,
        total=10.76,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=4.2,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.2,
        market_price_tax=2.2,
        market_price_with_tax=3.4,
        sourcing_markup_price=3.2,
        total=10.8,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=4.21,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.21,
        market_price_tax=2.21,
        market_price_with_tax=3.42,
        sourcing_markup_price=3.21,
        total=10.84,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        energy_tax_price=4.22,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.22,
        market_price_tax=2.22,
        market_price_with_tax=3.44,
        sourcing_markup_price=3.22,
        total=10.88,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 22, 0, 0, tzinfo=tzutc()),
        energy_tax_price=4.23,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.23,
        market_price_tax=2.23,
        market_price_with_tax=3.46,
        sourcing_markup_price=3.23,
        total=10.92,
      ),
    ]),
    list([
      Price(
        date_from=datetime.datetime(2022, 11, 21, 0, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=4.0,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.0,
        market_price_tax=2.0,
        market_price_with_tax=3.0,
        sourcing_markup_price=3.0,
        total=10.0,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 1, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=4.111,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.111,
        market_price_tax=2.111,
        market_price_with_tax=3.222,
        sourcing_markup_price=3.111,
        total=10.444,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 2, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=4.222,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.222,
        market_price_tax=2.222,
        market_price_with_tax=3.444,
        sourcing_markup_price=3.222,
        total=10.888,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 3, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=4.333,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.333,
        market_price_tax=2.333,
        market_price_with_tax=3.666,
        sourcing_markup_price=3.333,
        total=11.332,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 4, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=4.444,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.444,
        market_price_tax=2.444,
        market_price_with_tax=3.888,
        sourcing_markup_price=3.444,
        total=11.776,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 5, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=4.555,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.555,
        market_price_tax=2.555,
        market_price_with_tax=4.11,
        sourcing_markup_price=3.555,
        total=12.22,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 6, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=4.666,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.666,
        market_price_tax=2.666,
        market_price_with_tax=4.332,
        sourcing_markup_price=3.666,
        total=12.664,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 7, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=4.777,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.777,
        market_price_tax=2.777,
        market_price_with_tax=4.554,
        sourcing_markup_price=3.777,
        total=13.108,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 8, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=4.888,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.888,
        market_price_tax=2.888,
        market_price_with_tax=4.776,
        sourcing_markup_price=3.888,
        total=13.552,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 9, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=4.999,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.999,
        market_price_tax=2.999,
        market_price_with_tax=4.998,
        sourcing_markup_price=3.999,
        total=13.996,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 10, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=4.1,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.1,
        market_price_tax=2.1,
        market_price_with_tax=3.2,
        sourcing_markup_price=3.1,
        total=10.4,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 11, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=4.11,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=1.11,
        market_price_tax=2.11,
        market_price_with_tax=3.22,
        sourcing_markup_price=3.11,
        total=10.44,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 12, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=4.12,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.12,
        market_price_tax=2.12,
        market_price_with_tax=3.24,
        sourcing_markup_price=3.12,
        total=10.48,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 13, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=4.13,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.13,
        market_price_tax=2.13,
        market_price_with_tax=3.26,
        sourcing_markup_price=3.13,
        total=10.52,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 14, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=4.14,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.14,
        market_price_tax=2.14,
        market_price_with_tax=3.28,
        sourcing_markup_price=3.14,
        total=10.56,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 15, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=4.15,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.15,
        market_price_tax=2.15,
        market_price_with_tax=3.3,
        sourcing_markup_price=3.15,
        total=10.6,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 16, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=4.16,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.16,
        market_price_tax=2.16,
        market_price_with_tax=3.32,
        sourcing_markup_price=3.16,
        total=10.64,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 17, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=4.17,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.17,
        market_price_tax=2.17,
        market_price_with_tax=3.34,
        sourcing_markup_price=3.17,
        total=10.68,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 18, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=4.18,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.18,
        market_price_tax=2.18,
        market_price_with_tax=3.36,
        sourcing_markup_price=3.18,
        total=10.72,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 19, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=4.19,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.19,
        market_price_tax=2.19,
        market_price_with_tax=3.38,
        sourcing_markup_price=3.19,
        total=10.76,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 20, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=4.2,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.2,
        market_price_tax=2.2,
        market_price_with_tax=3.4,
        sourcing_markup_price=3.2,
        total=10.8,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 21, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=4.21,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.21,
        market_price_tax=2.21,
        market_price_with_tax=3.42,
        sourcing_markup_price=3.21,
        total=10.84,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 22, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        energy_tax_price=4.22,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.22,
        market_price_tax=2.22,
        market_price_with_tax=3.44,
        sourcing_markup_price=3.22,
        total=10.88,
      ),
      Price(
        date_from=datetime.datetime(2022, 11, 21, 23, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2022, 11, 22, 0, 0, tzinfo=tzutc()),
        energy_tax_price=4.23,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=1.23,
        market_price_tax=2.23,
        market_price_with_tax=3.46,
        sourcing_markup_price=3.23,
        total=10.92,
      ),
    ]),
  ])
# ---
# name: test_renew_token
  Authentication(authToken='hello', refreshToken='world')
# ---
# name: test_user
  User(id='my_id', connectionsStatus='READY', firstMeterReadingDate='2022-11-20', lastMeterReadingDate='2022-12-05', advancedPaymentAmount=99.0, hasCO2Compensation=False)
# ---
# name: test_user_prices
  list([
    list([
      Price(
        date_from=datetime.datetime(2023, 5, 20, 22, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 20, 23, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.052,
        market_price_tax=0.010962,
        market_price_with_tax=0.063,
        sourcing_markup_price=0.025,
        total=0.24,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 20, 23, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 0, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.04,
        market_price_tax=0.0084084,
        market_price_with_tax=0.0484,
        sourcing_markup_price=0.025,
        total=0.2254,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 0, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.034,
        market_price_tax=0.0071148,
        market_price_with_tax=0.0411,
        sourcing_markup_price=0.025,
        total=0.2181,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 1, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.029,
        market_price_tax=0.0060417,
        market_price_with_tax=0.035,
        sourcing_markup_price=0.025,
        total=0.212,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 2, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.03,
        market_price_tax=0.0062916,
        market_price_with_tax=0.0363,
        sourcing_markup_price=0.025,
        total=0.2133,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 3, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.028,
        market_price_tax=0.0059325,
        market_price_with_tax=0.0339,
        sourcing_markup_price=0.025,
        total=0.2109,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 4, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.031,
        market_price_tax=0.0064659,
        market_price_with_tax=0.0375,
        sourcing_markup_price=0.025,
        total=0.2145,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 5, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.028,
        market_price_tax=0.0057855,
        market_price_with_tax=0.0338,
        sourcing_markup_price=0.025,
        total=0.2108,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 6, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.02,
        market_price_tax=0.0042,
        market_price_with_tax=0.0242,
        sourcing_markup_price=0.025,
        total=0.2012,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 7, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.002,
        market_price_tax=0.0004494,
        market_price_with_tax=0.0024,
        sourcing_markup_price=0.025,
        total=0.1794,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 8, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0,
        market_price_tax=0,
        market_price_with_tax=0,
        sourcing_markup_price=0.025,
        total=0.177,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 9, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=-0.004,
        market_price_tax=-0.000819,
        market_price_with_tax=-0.0048,
        sourcing_markup_price=0.025,
        total=0.1722,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 10, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=-0.076,
        market_price_tax=-0.01596,
        market_price_with_tax=-0.092,
        sourcing_markup_price=0.025,
        total=0.085,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 11, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=-0.05,
        market_price_tax=-0.0105,
        market_price_with_tax=-0.0605,
        sourcing_markup_price=0.025,
        total=0.1165,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 12, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=-0.058,
        market_price_tax=-0.0122472,
        market_price_with_tax=-0.0702,
        sourcing_markup_price=0.025,
        total=0.1068,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 13, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=-0.026,
        market_price_tax=-0.0053907,
        market_price_with_tax=-0.0314,
        sourcing_markup_price=0.025,
        total=0.1456,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 14, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0,
        market_price_tax=-8.61e-05,
        market_price_with_tax=-0.0001,
        sourcing_markup_price=0.025,
        total=0.1769,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 15, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.002,
        market_price_tax=0.0004662,
        market_price_with_tax=0.0025,
        sourcing_markup_price=0.025,
        total=0.1795,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 16, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.041,
        market_price_tax=0.0086814,
        market_price_with_tax=0.0497,
        sourcing_markup_price=0.025,
        total=0.2267,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 17, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.085,
        market_price_tax=0.0179529,
        market_price_with_tax=0.103,
        sourcing_markup_price=0.025,
        total=0.28,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 18, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.091,
        market_price_tax=0.0190827,
        market_price_with_tax=0.1101,
        sourcing_markup_price=0.025,
        total=0.2871,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 19, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.091,
        market_price_tax=0.01911,
        market_price_with_tax=0.1101,
        sourcing_markup_price=0.025,
        total=0.2871,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 20, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.09,
        market_price_tax=0.0188874,
        market_price_with_tax=0.1089,
        sourcing_markup_price=0.025,
        total=0.2859,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 21, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=0.152,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.084,
        market_price_tax=0.017535,
        market_price_with_tax=0.1015,
        sourcing_markup_price=0.025,
        total=0.2785,
      ),
    ]),
    list([
      Price(
        date_from=datetime.datetime(2023, 5, 20, 22, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 20, 23, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 20, 23, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 0, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 0, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 1, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 1, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 2, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 2, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 3, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 3, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 4, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 4, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 5, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 5, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 6, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 6, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 7, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 7, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 8, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 8, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 9, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 9, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 10, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 10, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 11, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 11, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 12, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=False,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 12, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 13, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 13, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 14, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 14, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 15, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 15, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 16, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 16, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 17, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 17, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 18, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 18, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 19, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 19, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 20, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 20, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 21, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
      Price(
        date_from=datetime.datetime(2023, 5, 21, 21, 0, tzinfo=tzutc()),
        date_till=datetime.datetime(2023, 5, 21, 22, 0, tzinfo=tzutc()),
        energy_tax_price=0.593,
        for_future=True,
        for_now=False,
        for_today=False,
        market_price=0.277,
        market_price_tax=0.05818638,
        market_price_with_tax=0.3352,
        sourcing_markup_price=0.317,
        total=1.2452,
      ),
    ]),
  ])
# ---
